--- a/app/src/main/res/layout/activity_navigation.xml
+++ b/app/src/main/res/layout/activity_navigation.xml
@@ -1,8 +1,22 @@
 <?xml version="1.0" encoding="utf-8"?>
-<fragment xmlns:app="http://schemas.android.com/apk/res-auto" xmlns:android="http://schemas.android.com/apk/res/android"
-          android:layout_height="match_parent"
-          android:layout_width="match_parent"
-          android:id="@+id/navigation_frag"
-          app:defaultNavHost="true"
-          android:name="androidx.navigation.fragment.NavHostFragment"
-          app:navGraph="@navigation/nav_graph"/>
+<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
+        xmlns:app="http://schemas.android.com/apk/res-auto"
+        android:layout_width="match_parent"
+        android:layout_height="match_parent">
+
+    <fragment
+            android:id="@+id/navigation_frag"
+            android:name="androidx.navigation.fragment.NavHostFragment"
+            android:layout_width="match_parent"
+            android:layout_height="match_parent"
+            android:layout_above="@+id/bottom_appbar"
+            app:defaultNavHost="true"
+            app:navGraph="@navigation/nav_graph" />
+
+    <com.google.android.material.bottomnavigation.BottomNavigationView
+            android:id="@+id/bottom_appbar"
+            app:menu="@menu/navigation_menu"
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content"
+            android:layout_alignParentBottom="true" />
+</RelativeLayout>
